EXTRA_DIST = \
    argument-parsing-howto.markdown \
    binaryrpc-howto.markdown \
    binserialization.txt \
    connection.md \
    csv-howto.markdown \
    json-howto.markdown \
    jsonquick-howto.markdown \
    jsonrpc-howto.markdown \
    logging-howto.markdown \
    propertiesquick-howto.markdown \
    rpc-howto.markdown \
    serialization-howto.markdown \
    timezone-howto.markdown \
    xmlrpc-howto.markdown
