nobase_include_HEADERS = \
        cxxtools/application.h \
        cxxtools/arg.h \
        cxxtools/argin.h \
        cxxtools/argout.h \
        cxxtools/base64codec.h \
        cxxtools/base64stream.h \
        cxxtools/bin/bin.h \
        cxxtools/bin/deserializer.h \
        cxxtools/bin/formatter.h \
        cxxtools/bin/serializer.h \
        cxxtools/bin/rpcclient.h \
        cxxtools/bin/rpcserver.h \
        cxxtools/bin/parser.h \
        cxxtools/byteorder.h \
        cxxtools/cache.h \
        cxxtools/callable.h \
        cxxtools/callable.tpp \
        cxxtools/composer.h \
        cxxtools/csv.h \
        cxxtools/csvdeserializer.h \
        cxxtools/csvparser.h \
        cxxtools/csvserializer.h \
        cxxtools/char.h \
        cxxtools/charmapcodec.h \
        cxxtools/cgi.h \
        cxxtools/clock.h \
        cxxtools/connectable.h \
        cxxtools/connection.h \
        cxxtools/constmethod.h \
        cxxtools/constmethod.tpp \
        cxxtools/conversionerror.h \
        cxxtools/convert.h \
        cxxtools/date.h\
        cxxtools/datetime.h \
        cxxtools/decomposer.h \
        cxxtools/delegate.h \
        cxxtools/delegate.tpp \
        cxxtools/deserializer.h \
        cxxtools/destructionsentry.h \
        cxxtools/directory.h \
        cxxtools/dlloader.h \
        cxxtools/envsubst.h \
        cxxtools/event.h \
        cxxtools/eventloop.h \
        cxxtools/eventsink.h \
        cxxtools/eventsource.h \
        cxxtools/facets.h \
        cxxtools/fdstream.h \
        cxxtools/formatter.h \
        cxxtools/file.h \
        cxxtools/filedevice.h \
        cxxtools/fileinfo.h \
        cxxtools/function.h \
        cxxtools/function.tpp \
        cxxtools/hexdump.h \
        cxxtools/hdstream.h \
        cxxtools/hmac.h \
        cxxtools/http/client.h \
        cxxtools/http/messageheader.h \
        cxxtools/http/reply.h \
        cxxtools/http/replyheader.h \
        cxxtools/http/request.h \
        cxxtools/http/requestheader.h \
        cxxtools/http/server.h \
        cxxtools/http/service.h \
        cxxtools/http/responder.h \
        cxxtools/inideserializer.h \
        cxxtools/ini.h \
        cxxtools/inifile.h \
        cxxtools/iniparser.h \
        cxxtools/iniserializer.h \
        cxxtools/invokable.h \
        cxxtools/invokable.tpp \
        cxxtools/ioerror.h \
        cxxtools/iodevice.h \
        cxxtools/iostream.h \
        cxxtools/iso8859_1codec.h \
        cxxtools/iso8859_2codec.h \
        cxxtools/iso8859_3codec.h \
        cxxtools/iso8859_4codec.h \
        cxxtools/iso8859_5codec.h \
        cxxtools/iso8859_6codec.h \
        cxxtools/iso8859_7codec.h \
        cxxtools/iso8859_8codec.h \
        cxxtools/iso8859_9codec.h \
        cxxtools/iso8859_10codec.h \
        cxxtools/iso8859_11codec.h \
        cxxtools/iso8859_13codec.h \
        cxxtools/iso8859_14codec.h \
        cxxtools/iso8859_15codec.h \
        cxxtools/iso8859_16codec.h \
        cxxtools/join.h \
        cxxtools/json.h \
        cxxtools/json/httpclient.h \
        cxxtools/json/httpservice.h \
        cxxtools/json/request.h \
        cxxtools/json/responder.h \
        cxxtools/json/rpcclient.h \
        cxxtools/json/rpcserver.h \
        cxxtools/jsondeserializer.h \
        cxxtools/jsonformatter.h \
        cxxtools/jsonparser.h \
        cxxtools/jsonserializer.h \
        cxxtools/library.h \
        cxxtools/limitstream.h \
        cxxtools/lrucache.h \
        cxxtools/log.h \
        cxxtools/main.h \
        cxxtools/md5.h \
        cxxtools/md5stream.h \
        cxxtools/method.h \
        cxxtools/method.tpp \
        cxxtools/mime.h \
        cxxtools/multifstream.h \
        cxxtools/net/addrinfo.h \
        cxxtools/net/bufferedsocket.h \
        cxxtools/net/net.h \
        cxxtools/net/tcpserver.h \
        cxxtools/net/tcpsocket.h \
        cxxtools/net/tcpstream.h \
        cxxtools/net/udp.h \
        cxxtools/net/udpstream.h \
        cxxtools/net/uri.h \
        cxxtools/pipe.h \
        cxxtools/pool.h \
        cxxtools/posix/commandinput.h \
        cxxtools/posix/commandoutput.h \
        cxxtools/posix/daemonize.h\
        cxxtools/posix/exec.h \
        cxxtools/posix/fork.h \
        cxxtools/posix/pipe.h \
        cxxtools/posix/pipestream.h \
        cxxtools/properties.h \
        cxxtools/propertiesdeserializer.h \
        cxxtools/propertiesserializer.h \
        cxxtools/propertiesfile.h \
        cxxtools/propertiesparser.h \
        cxxtools/ptrstreambuf.h \
        cxxtools/ptrstream.h \
        cxxtools/query_params.h \
        cxxtools/queue.h \
        cxxtools/quotedprintablecodec.h \
        cxxtools/quotedprintablestream.h \
        cxxtools/refcounted.h \
        cxxtools/regex.h \
        cxxtools/remoteclient.h \
        cxxtools/remoteexception.h \
        cxxtools/remoteprocedure.h \
        cxxtools/remoteprocedureva.h \
        cxxtools/remoteprocedure.tpp \
        cxxtools/remoteresult.h \
        cxxtools/resetter.h \
        cxxtools/scopedincrement.h \
        cxxtools/selector.h \
        cxxtools/selectable.h \
        cxxtools/serializationerror.h \
        cxxtools/serializationinfo.h \
        cxxtools/serviceprocedure.h \
        cxxtools/serviceprocedure.tpp \
        cxxtools/serviceregistry.h \
        cxxtools/settings.h \
        cxxtools/split.h \
        cxxtools/signal.h \
        cxxtools/signal.tpp \
        cxxtools/slot.h \
        cxxtools/slot.tpp \
        cxxtools/sourceinfo.h \
        cxxtools/sslcertificate.h \
        cxxtools/sslctx.h \
        cxxtools/stddevice.h \
        cxxtools/stdstream.h \
        cxxtools/streambuffer.h \
        cxxtools/streamcounter.h \
        cxxtools/string.h \
        cxxtools/string.tpp \
        cxxtools/stringstream.h \
        cxxtools/systemerror.h \
        cxxtools/tee.h \
        cxxtools/textbuffer.h \
        cxxtools/textcodec.h \
        cxxtools/textstream.h \
        cxxtools/time.h \
        cxxtools/timer.h \
        cxxtools/timespan.h \
        cxxtools/trim.h \
        cxxtools/typetraits.h \
        cxxtools/tz.h \
        cxxtools/utf8.h \
        cxxtools/utf8codec.h \
        cxxtools/uuencode.h \
        cxxtools/void.h \
        cxxtools/win1252codec.h \
        cxxtools/log/cxxtools.h \
        cxxtools/unit/application.h \
        cxxtools/unit/assertion.h \
        cxxtools/unit/jsonreporter.h \
        cxxtools/unit/registertest.h \
        cxxtools/unit/reporter.h \
        cxxtools/unit/test.h \
        cxxtools/unit/testcase.h \
        cxxtools/unit/testcontext.h \
        cxxtools/unit/testfixture.h \
        cxxtools/unit/testmain.h \
        cxxtools/unit/testmethod.h \
        cxxtools/unit/testprotocol.h \
        cxxtools/unit/testsuite.h \
        cxxtools/xml/attribute.h \
        cxxtools/xml/characters.h \
        cxxtools/xml/comment.h \
        cxxtools/xml/doctypedeclaration.h \
        cxxtools/xml/enddocument.h \
        cxxtools/xml/endelement.h \
        cxxtools/xml/entityresolver.h \
        cxxtools/xml/namespace.h \
        cxxtools/xml/namespacecontext.h \
        cxxtools/xml/node.h \
        cxxtools/xml/processinginstruction.h \
        cxxtools/xml/startelement.h \
        cxxtools/xml/xml.h \
        cxxtools/xml/xmlerror.h \
        cxxtools/xml/xmlformatter.h \
        cxxtools/xml/xmldeserializer.h \
        cxxtools/xml/xmlreader.h \
        cxxtools/xml/xmlserializer.h \
        cxxtools/xml/xmlwriter.h \
        cxxtools/xmlrpc/client.h \
        cxxtools/xmlrpc/errorcodes.h \
        cxxtools/xmlrpc/httpclient.h \
        cxxtools/xmlrpc/formatter.h \
        cxxtools/xmlrpc/responder.h \
        cxxtools/xmlrpc/scanner.h \
        cxxtools/xmlrpc/service.h

nobase_nodist_include_HEADERS = \
        cxxtools/config.h
