add_library(cxxtools
    addrinfo.cpp
    addrinfoimpl.cpp
    application.cpp
    applicationimpl.cpp
    base64codec.cpp
    bufferedsocket.cpp
    cgi.cpp
    char.cpp
    charmapcodec.cpp
    clock.cpp
    clockimpl.cpp
    connectable.cpp
    connection.cpp
    conversionerror.cpp
    convert.cpp
    csvdeserializer.cpp
    csvparser.cpp
    csvserializer.cpp
    date.cpp
    datetime.cpp
    dateutils.cpp
    decomposer.cpp
    deserializer.cpp
    directory.cpp
    directoryimpl.cpp
    envsubst.cpp
    error.cpp
    eventloop.cpp
    eventsink.cpp
    eventsource.cpp
    fdstream.cpp
    file.cpp
    filedevice.cpp
    filedeviceimpl.cpp
    fileimpl.cpp
    fileinfo.cpp
    formatter.cpp
    hdstream.cpp
    inideserializer.cpp
    inifile.cpp
    iniparser.cpp
    iniserializer.cpp
    iodevice.cpp
    iodeviceimpl.cpp
    ioerror.cpp
    iostream.cpp
    iso8859_codec.cpp
    jsondeserializer.cpp
    jsonformatter.cpp
    jsonparser.cpp
    library.cpp
    libraryimpl.cpp
    log.cpp
    md5stream.cpp
    md5.c
    mime.cpp
    multifstream.cpp
    net.cpp
    pipe.cpp
    pipeimpl.cpp
	posix/commandinput.cpp
	posix/commandoutput.cpp
	posix/daemonize.cpp
	posix/fork.cpp
	posix/pipestream.cpp
	posix/posixpipe.cpp
    propertiesdeserializer.cpp
    propertiesfile.cpp
    propertiesparser.cpp
    propertiesserializer.cpp
    query_params.cpp
    quotedprintablecodec.cpp
    regex.cpp
    remoteclient.cpp
    selectable.cpp
    selector.cpp
    selectorimpl.cpp
    serializationerror.cpp
    serializationinfo.cpp
    serviceregistry.cpp
    settings.cpp
    settingsreader.cpp
    settingswriter.cpp
    signal.cpp
    sslcertificate.cpp
    sslcertificateimpl.cpp
    sslctx.cpp
    sslctximpl.cpp
    stddevice.cpp
    streambuffer.cpp
    string.cpp
    stringstream.cpp
    systemerror.cpp
    tcpserver.cpp
    tcpserverimpl.cpp
    tcpsocket.cpp
    tcpsocketimpl.cpp
    tcpstream.cpp
    tee.cpp
    textbuffer.cpp
    textcodec.cpp
    textstream.cpp
    time.cpp
    timer.cpp
    timespan.cpp
    tz.cpp
    udp.cpp
    udpstream.cpp
    uri.cpp
    utf8codec.cpp
    uuencode.cpp
    win1252codec.cpp
	xml/characters.cpp
	xml/endelement.cpp
	xml/entityresolver.cpp
	xml/namespacecontext.cpp
	xml/startelement.cpp
	xml/xmldeserializer.cpp
	xml/xmlerror.cpp
	xml/xmlformatter.cpp
	xml/xmlreader.cpp
	xml/xmlserializer.cpp
	xml/xmlwriter.cpp
)

target_compile_features(cxxtools PUBLIC cxx_std_11)
target_include_directories(cxxtools PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(cxxtools PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(cxxtools PRIVATE OpenSSL::SSL)
