add_executable(alltests
	arg-test.cpp
	base64-test.cpp
	binrpc-test.cpp
	binserializer-test.cpp
	cache-test.cpp
	char-test.cpp
	clock-test.cpp
	convert-test.cpp
	csvdeserializer-test.cpp
	csvserializer-test.cpp
	date-test.cpp
	datetime-test.cpp
	directory-test.cpp
	envsubst-test.cpp
	eventloop-test.cpp
	fileinfo-test.cpp
	file-test.cpp
	inifile-test.cpp
	iniparser-test.cpp
	iniserialization-test.cpp
	iso8859_15-test.cpp
	iso8859_1-test.cpp
	join-test.cpp
	jsondeserializer-test.cpp
	jsonrpchttp-test.cpp
	jsonrpc-test.cpp
	jsonserializer-test.cpp
	json-test.cpp
	limitstream-test.cpp
	logconfiguration-test.cpp
	lrucache-test.cpp
	md5-test.cpp
	mime-test.cpp
	pool-test.cpp
	propertiesserializer-test.cpp
	properties-test.cpp
	ptrstream-test.cpp
	query_params-test.cpp
	quotedprintable-test.cpp
	regex-test.cpp
	scopedincrement-test.cpp
	serializationinfo-test.cpp
	serialization-test.cpp
	sipath-test.cpp
	split-test.cpp
	string-test.cpp
	test-main.cpp
	timespan-test.cpp
	time-test.cpp
	trim-test.cpp
	tz-test.cpp
	uri-test.cpp
	utf8-test.cpp
	win1252-test.cpp
	xmldeserializer-test.cpp
	xmlreader-test.cpp
	xmlrpccallback-test.cpp
	xmlrpc-test.cpp
	xmlserializer-test.cpp
)

target_link_libraries(alltests cxxtools cxxtools-http cxxtools-bin cxxtools-xmlrpc cxxtools-json cxxtools-unit)
